symbol values in util, gamestate to getFirst